// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TopicsPresentation WIDGET_LIST_PHRASE 1`] = `
<div
  class="
        bg-fv-orange
        bg-center
        bg-cover
        flex
        flex-col
        items-center
        justify-between
        rounded-25
        xl:rounded-50
        py-6
        text-white
        w-full
      "
  data-testid="TopicsPresentationTopic"
>
  <svg
    class="
        fill-current
        w-7
        h-7
        lg:w-8
        lg:h-8
        xl:w-12
        xl:h-12
      "
    data-testid="Quote"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
    <path
      d="M6 17h3l2-4V7H5v6h3zm8 0h3l2-4V7h-6v6h3z"
    />
  </svg>
  <h1
    class="
          text-xl
          text-center
          lg:text-2xl
          xl:text-5xl
          font-medium
        "
  >
    lorem
  </h1>
  <div>
    99 phrases
  </div>
</div>
`;

exports[`TopicsPresentation WIDGET_LIST_STORY 1`] = `
<div
  class="
        bg-fv-purple
        bg-center
        bg-cover
        flex
        flex-col
        items-center
        justify-between
        rounded-25
        xl:rounded-50
        py-6
        text-white
        w-full
      "
  data-testid="TopicsPresentationTopic"
>
  <svg
    class="
        fill-current
        w-7
        h-7
        lg:w-8
        lg:h-8
        xl:w-12
        xl:h-12
      "
    data-testid="Book"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12.52,5.59c0,0,4.44-2.95,9.44-2.95v16.69c0,0-6.75-0.56-9.44,2.13V5.59z"
    />
    <path
      d="M11.49,5.59c0,0-4.44-2.95-9.44-2.95v16.69c0,0,6.75-0.56,9.44,2.13V5.59z"
    />
  </svg>
  <h1
    class="
          text-xl
          text-center
          lg:text-2xl
          xl:text-5xl
          font-medium
        "
  >
    lorem
  </h1>
  <h2
    class="
          text-base
          lg:text-xl
          xl:text-3xl
        "
  >
    ipsum
  </h2>
</div>
`;

exports[`TopicsPresentation WIDGET_LIST_WORD 1`] = `
<div
  class="
        bg-fv-turquoise
        bg-center
        bg-cover
        flex
        flex-col
        items-center
        justify-between
        rounded-25
        xl:rounded-50
        py-6
        text-white
        w-full
      "
  data-testid="TopicsPresentationTopic"
>
  <svg
    class="
        fill-current
        w-7
        h-7
        lg:w-8
        lg:h-8
        xl:w-12
        xl:h-12
      "
    data-testid="ChatBubble"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
    <path
      d="M20 2H4c-1.1 0-2 .9-2 2v18l4-4h14c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2z"
    />
  </svg>
  <h1
    class="
          text-xl
          text-center
          lg:text-2xl
          xl:text-5xl
          font-medium
        "
  >
    lorem
  </h1>
  <h2
    class="
          text-base
          lg:text-xl
          xl:text-3xl
        "
  >
    ipsum
  </h2>
  <button
    aria-live="off"
    type="button"
  >
    <div
      class="sr-only"
    >
      Play audio
    </div>
    <svg
      class="
        fill-current
        w-7
        h-7
        lg:w-8
        lg:h-8
        xl:w-12
        xl:h-12
      "
      height="24"
      viewBox="0 0 512 512"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm115.7 272l-176 101c-15.8 8.8-35.7-2.5-35.7-21V152c0-18.4 19.8-29.8 35.7-21l176 107c16.4 9.2 16.4 32.9 0 42z"
      />
    </svg>
  </button>
</div>
`;
